@startuml classDiagram

title Class Diagram
!define List java.util.List !define ArrayList java.util.ArrayList

core.ScoreBoard --|> core.Leaderboard
core.PlayerPair --> "Players: 2" core.Player
core.ScoreBoard --> "Players: *" core.Player
core.gameSetup -- core.PlayerPair
core.CreatePlayerPairs --> core.PlayerPair
core.CreatePlayerPairs --> core.Player

ui.AppControllerScoreBoard -- core.ScoreBoard
ui.AppControllerScoreBoard -- core.Leaderboard
ui.AppControllerPadel -- core.Player
ui.AppControllerGames -- core.gameSetup
ui.AppControllerGames -- core.createPlayerPairs
ui.AppControllerGames -- core.PlayerPair


package core {
    class Player {
        - name: String
        - age: int
        - wins: int
        - tlfNr: int
        + Player(name: String, age: int, tlfNr: int, wins: int)
        + setName(name: String): void
        + setAge(age: int): void
        + setWins(wins: int): void
        + getName(): String
        + getAge(): int
        + getWins(): int
        + getTlfNr(): int
        + setTlfNr(tlfNr: int): void
        
    }

    class PlayerPair {
        - player1: Player
        - player2: Player
        + PlayerPair(player1: Player, player2: Player)
    }

    class createPlayerPairs {
        - playerList: List<Player>
        - PlayerPairslist: List<PlayerPair>

        + createPlayerPairs(players: List<Player>): void
        + remakePlayersOrder(): void
        + getPlayerPairs(): List<PlayerPair>
        + getPlayerlist(): List<Player>
    }


    class ScoreBoard {
        - filename: String
        - scoreList: ArrayList<Player>
        + Scoreboard()
        + Scoreboard(filename: String)
        + Scoreboard(scorelist: ArrayList<Player>)
        + Scoreboard(filename: String, scorelist: ArrayList<Player>)
        + getFilename(): String
        + setFilename(filename: String): void
        + addPlayer(player: Player): void
        + getScorelist(): ArrayList<Player>
        + setScorelist(scorelist: ArrayList<Player>): void
        + removePlayer(player: Player): void
        + saveScoreboard(): String
        + getTopPlayers(n: int): List<Player

    }

    class Leaderboard {
        + Leaderboard()
        + Leaderboard(filename: String)
        + sortLeaderboard(): void
        + addScoreboard(scoreboard: Scoreboard): void
        + getTopPlayers(n: int): ArrayList<Player>
    }

    class gameSetup {
        - maxSingle: int
        - maxDouble: int
        - maxPlayerpairs: int
        - singelCourt: int
        - doubleCourt: int
        - PlayerPairslist: List<PlayerPair>

        + gameSetup(doubleCourt: int, playerPairslist: List<PlayerPair>)
        + getSingle(): int
        + getDouble(): int
        - courts(ammount: int): void
    }

}
package ui {
    class AppControllerGames {
        - Player: List<Player>
        - Pairs: List<PlayerPair>
        - roundSelector: RoundSelector
        - chosenRounds: int
        - round: int
        - courts: gameSetup
        - error: TextArea
        - rounds: TextField
        - GoToScore: Button
        - NewRound: Button
        - toggleButtons: ArrayList<ToggleButton>

        + addToggleBs()
        + addPointsToPlayer()
        + NewRound(event: ActionEvent)
        + shuffle()
        + pairOne(event: ActionEvent)
        + pairTwo(event: ActionEvent)
        + allSelected(): boolean
        + roundSelector(chosenRounds: int): int
        + updateRound()
        + CreateGame()
        + createCourts()
        + addPlayersToCourts()
        + setPlayerList(playerlist: ArrayList<Player>)
        + setPairs()
        + GoToScore(event: ActionEvent)
    }

    class AppControllerPadel {
        - playerlist: ArrayList<Player>
        
        + AddPlayer(event: ActionEvent): void
        + CreateGame(event: ActionEvent): void

    }

    class AppControllerScoreBoard {
        - leaderboard: Leaderboard
        - scoreboard: Scoreboard

        + initialize(): void
        + createLeaderboard(): void
        + setScoreboard(playerlist: List<Player>): void
        - populateTable(): void
        - populateScoreboard(): void
        + setScoreboard(players: ArrayList<Player>): void

    }
}

@enduml